WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
19426
LOW_BANDWIDTH_DISPLAY build broken
https://bugs.webkit.org/show_bug.cgi?id=19426
Summary
LOW_BANDWIDTH_DISPLAY build broken
David Krause
Reported
2008-06-06 21:22:46 PDT
Using a recent nightly (
r34342
), it seems that the build will not finish if USE(LOW_BANDWIDTH_DISPLAY) is set. WebCore/loader/FrameLoader.cpp fails to compile because of 3 lines of code that look like: cache->ref(this); or: (*it)->deref(this); Looking back, it appears that the changes on changeset 31834 may have introduced this breakage. The build at least completes if I change ref to addClient and deref to removeClient. Can an expert confirm this? If so, I'll submit a patch changing this.
Attachments
Proposed patch
(2.12 KB, patch)
2008-06-08 20:04 PDT
,
David Krause
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Krause
Comment 1
2008-06-08 20:04:11 PDT
Created
attachment 21587
[details]
Proposed patch Proposed patch uploaded that changes the three references causing the build to break.
Darin Adler
Comment 2
2008-06-08 20:07:18 PDT
Comment on
attachment 21587
[details]
Proposed patch r=me
Mark Rowe (bdash)
Comment 3
2008-06-22 18:03:11 PDT
Landed in
r34733
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug