2008-06-22  David Krause  <david.krause@gmail.com>

Reviewed by Darin Adler.

        Fix https://bugs.webkit.org/show_bug.cgi?id=19426
        Bug 19426: LOW_BANDWIDTH_DISPLAY build broken

        Change ref to addClient and deref to removeClient in code wrapped
        by USE(LOW_BANDWIDTH_DISPLAY) to match changes in r31834.

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::addLowBandwidthDisplayRequest):
        (WebCore::FrameLoader::removeAllLowBandwidthDisplayRequests):
        (WebCore::FrameLoader::notifyFinished):


Canonical link: https://commits.webkit.org/27181@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34733 268f45cc-cd09-0410-ab3c-d52691b4dbfc