WebCore/loader/FrameLoader.cpp
@@ -4929,7 +4929,7 @@ bool FrameLoader::addLowBandwidthDisplayRequest(CachedResource* cache)
         case CachedResource::Script:
             m_needToSwitchOutLowBandwidthDisplay = true;
             m_externalRequestsInLowBandwidthDisplay.add(cache);
-            cache->ref(this);
+            cache->addClient(this);
             return true;
         case CachedResource::ImageResource:
         case CachedResource::FontResource:
@@ -4950,7 +4950,7 @@ void FrameLoader::removeAllLowBandwidthDisplayRequests()
 {
     HashSet<CachedResource*>::iterator end = m_externalRequestsInLowBandwidthDisplay.end();
     for (HashSet<CachedResource*>::iterator it = m_externalRequestsInLowBandwidthDisplay.begin(); it != end; ++it)
-        (*it)->deref(this);
+        (*it)->removeClient(this);
     m_externalRequestsInLowBandwidthDisplay.clear();
 }
     
@@ -4958,7 +4958,7 @@ void FrameLoader::notifyFinished(CachedResource* script)
 {
     HashSet<CachedResource*>::iterator it = m_externalRequestsInLowBandwidthDisplay.find(script);
     if (it != m_externalRequestsInLowBandwidthDisplay.end()) {
-        (*it)->deref(this);
+        (*it)->removeClient(this);
         m_externalRequestsInLowBandwidthDisplay.remove(it);
         switchOutLowBandwidthDisplayIfReady();        
     }
